--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Wendure blog
 subtitle: ''
-description: ''
+description: 'email:xmwen1100@gmail.com'
 keywords:
-author: 温湘民
+author: Wendure
 language: zh-CN
 timezone: ''
 
